versions/v2.8/modules/en/pages/installation-and-upgrade/resources/bootstrap-password.adoc
= Setting up the Bootstrap Password
:revdate: 2024-09-26
:page-revdate: {revdate}

When you install Rancher, you can set a bootstrap password for the first admin account.

If you choose not to set a bootstrap password, Rancher randomly generates a bootstrap password for the first admin account.

For details on how to set the bootstrap password, see below.

== Password Requirements

The bootstrap password can be any length.

When you reset the first admin account's password after first login, the new password must be at least 12 characters long.

You can xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc#_minimum_password_length[customize the minimum password length] for user accounts, within limitations.

Minimum password length can be any positive integer value between 2 and 256. Decimal values and leading zeroes are not allowed.

== Specifying the Bootstrap Password

During xref:installation-and-upgrade/install-rancher.adoc[Rancher installation], set `bootstrapPassword` alongside any other flags for the Rancher Helm chart. For example:

[,bash]
----
helm install rancher rancher-<chart-repo>/rancher \
  --set bootstrapPassword=<password>
----

== Retrieving the Bootstrap Password

The bootstrap password is stored in the Docker container logs. After Rancher is installed, the UI shows instructions for how to retrieve the password based on your installation method. 

[,bash]
----
kubectl get secret --namespace cattle-system bootstrap-secret -o go-template='{{ .data.bootstrapPassword|base64decode}}{{ "\n" }}'
----
